# aws-embedded-metrics

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
aws_embedded_metrics/: all.html  enum.Unit.html  fn.metric_scope.html  index.html  macro.dimensions!.html  macro.dimensions.html  sidebar-items.js  struct.MetricLogger.html
aws_embedded_metrics/log/: enum.Unit.html  fn.metric_scope.html  struct.MetricLogger.html
benches/: serialize.rs
data/: schema.json
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: config.rs  env.rs  lib.rs  log.rs  serialize.rs  sink.rs
src/aws_embedded_metrics/: config.rs.html  env.rs.html  lib.rs.html  log.rs.html  serialize.rs.html  sink.rs.html
