[package]
name = "aws-embedded-metrics"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
hyper = "0.13"
maplit = "1.0"
futures = "0.3"
serde_json = "1.0"
tokio  = { version = "0.2.4", features = ["dns", "tcp", "udp", "rt-core"] }
serde = { version = "1.0", features = ["derive"] }