[package]
name = "aws-embedded-metrics"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A client for reporting high cardinatlity metrics to AWS CloudWatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
hyper = "0.13"
maplit = "1.0"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
jsonschema-valid = "0.2"